--- a/Individual_Notebook.ipynb
+++ b/Individual_Notebook.ipynb
@@ -2781,7 +2781,7 @@
       },
       "source": [
         "#### Inference:\n",
-        "#### We can see some of the most frequently used words in tweets like COVID19, coronaviru, store, grocery, shopping, people, supermarket, price etc."
+        "#### We can see some of the most frequently used words in tweets like COVID19, coronavirus, store, grocery, shopping, people, supermarket, price etc."
       ]
     },
     {
@@ -3553,7 +3553,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# creating an object of Support Vector Classification\n",
+        "# creating an object of Support Vector Classifier\n",
         "svc = SVC()"
       ],
       "metadata": {
@@ -3897,10 +3897,48 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Inference: <br>\n"
+        "Inference: <br>\n",
+        "\n",
+        "\n",
+        "*   Logistic regression has performed slightly better than the Support Vector Classifier and got the highest accuracy of around 80%.\n",
+        "\n",
+        "*   Multinomial Naive Bayes performed the worst with an f1 score of just 0.57.\n"
       ],
       "metadata": {
         "id": "iNiihSGE9uZq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<br>\n",
+        "\n",
+        "# Conclusion:\n",
+        "\n",
+        "*   #### Around the globe, people tweeted positive tweets more in comparison to negative and neutral tweets.\n",
+        "\n",
+        "*   #### Most of the tweets’ length was around 250 which means there was a high curiosity among the people related to COVID-19.\n",
+        "\n",
+        "*   #### People tweeted more in March than in April as many countries imposed lockdown during this period.\n",
+        "\n",
+        "*   #### The maximum number of tweets were from London (England) followed by the United States.\n",
+        "\n",
+        "*   #### During the pandemic, we saw mixed reactions from Australia as the count of positive and negative tweets were almost the same.\n",
+        "\n",
+        "\n",
+        "*   #### Most of the tweets contain words like COVID19, grocery, supermarket, store, price etc. which shows during the pandemic, people were mainly concerned about food supplies and their prices.\n",
+        "\n",
+        "\n",
+        "*   #### Logistic regression has performed the best as it has got the highest accuracy, precision and recall values with a decent f1-score.\n",
+        "\n",
+        "*   #### Support Vector Classifier also performed well with not much of a difference in performance from logistic regression.\n",
+        "\n",
+        "*   #### Multinomial Naive Bayes is the worst performer which means the assumption of independence among the variables does not hold for this dataset.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1e8CAPW-AOPa"
       }
     }
   ],
