added more info in inference

--- a/Individual_Notebook.ipynb
+++ b/Individual_Notebook.ipynb
@@ -711,7 +711,7 @@
       "source": [
         "Here we see Location column has around eight thousand five hundred null values.\n",
         "<br><br>\n",
-        "#### **We don't have to remove the null values from the dataset because we have to classify the tweet on the basis of the text present in OriginalTweet column, hence Location column will not hamper the performance of our model.**"
+        "#### **We don't have to remove the null values of Location column because we have to classify the tweet on the basis of the text present in the OriginalTweet column. Also we don't want to loose the important information present in the dataset as that might hamper the performance of our model.**"
       ]
     },
     {
@@ -2781,7 +2781,7 @@
       },
       "source": [
         "#### Inference:\n",
-        "#### We can see some of the most frequently used words in tweets like COVID19, coronavirus, store, grocery, shopping, people, supermarket, price etc."
+        "#### We can see some of the most frequently used words in tweets like COVID19, coronavirus, store, grocery, shopping, people, supermarket, price etc. as people were mainly concerned about food supplies."
       ]
     },
     {
