added a few comments

--- a/Individual_Notebook.ipynb
+++ b/Individual_Notebook.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "FCTp3q5J35d-"
       },
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "hH7_QJsrQxsT"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "CmmkWHcP6516"
       },
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "3cqz1wAADvSX"
       },
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -635,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -750,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "05ogHS2rBmYM"
       },
@@ -784,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -811,7 +811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -859,7 +859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1025,7 +1025,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1057,7 +1057,7 @@
         }
       ],
       "source": [
-        "# setting seaborn plotting aesthetics for creating a bar chart\n",
+        "# setting seaborn plotting aesthetics for creating a row chart\n",
         "sns.barplot(\n",
         "    x = 'frequency',\n",
         "    y = 'Sentiment',\n",
@@ -1091,7 +1091,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "d_nH1JJzpcNy"
       },
@@ -1106,7 +1106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1135,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1182,7 +1182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1214,7 +1214,7 @@
         }
       ],
       "source": [
-        "# setting seaborn plotting aesthetics for creating a bar chart\n",
+        "# setting seaborn plotting aesthetics for creating a histogram\n",
         "sns.histplot(\n",
         "    x = tweet_df['OriginalTweet'].str.len(),\n",
         "    bins = 50\n",
@@ -1245,7 +1245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "9dl9eaOc9z2G"
       },
@@ -1257,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "Gif7HTZZ9z2G"
       },
@@ -1270,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1298,7 +1298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1336,7 +1336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1515,7 +1515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1586,7 +1586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1788,7 +1788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "dVuELS-jcTSu"
       },
@@ -1813,12 +1813,12 @@
       "metadata": {
         "id": "_ZL0eJIeowR-"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1884,7 +1884,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "icwEPDPXnWcd"
       },
@@ -1904,7 +1904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2145,7 +2145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2225,7 +2225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "540-IaPK8iyB"
       },
@@ -2239,7 +2239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "4X6bTN_7jaXk"
       },
@@ -2250,7 +2250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2479,7 +2479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "UByxQU0_iuXv"
       },
@@ -2493,7 +2493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "eYfJBRgQid37"
       },
@@ -2504,7 +2504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2731,7 +2731,7 @@
         "<br>\n",
         "\n",
         "## Creating a word cloud to visualize commonly used words in tweets\n",
-        "After removing punctuations and stopwords from the tweets we want to know which words are mostly used by the people."
+        "After removing punctuation and stopwords from the tweets we want to know which words are mostly used by the people."
       ]
     },
     {
@@ -2796,7 +2796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "fTySFDmvYdOl"
       },
@@ -2813,7 +2813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "0TtHwahXZOtG"
       },
@@ -2824,7 +2824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3053,7 +3053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "NCITnOulglPI"
       },
@@ -3065,7 +3065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "jXoREsdJgm7u"
       },
@@ -3077,7 +3077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3111,7 +3111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "QcTSX5Quhgi4"
       },
@@ -3123,7 +3123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "Z5-XvnAElGdm"
       },
@@ -3154,7 +3154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "VR2y_II9zdmh"
       },
@@ -3166,7 +3166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "IzmnrtQfuB53"
       },
@@ -3247,7 +3247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3280,7 +3280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "l3enOA3O1QpZ"
       },
@@ -3303,7 +3303,7 @@
         "id": "TJDb1rHjPHdN",
         "outputId": "ad6b67d1-0ed3-412e-cae1-db0cdf546960"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3319,7 +3319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3352,7 +3352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "oVdcDQ5E1R9c"
       },
@@ -3364,7 +3364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "0J3ltTRL0eOm"
       },
@@ -3423,7 +3423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": null,
       "metadata": {
         "id": "14Le32PAAvaz",
         "colab": {
@@ -3447,7 +3447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "SC8R3nVBAvaz",
         "colab": {
@@ -3480,7 +3480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "3U_ZduPilmEz"
       },
@@ -3503,7 +3503,7 @@
         "id": "ErZnPLhvSfR6",
         "outputId": "4a022530-db09-4408-df9b-496797c851e2"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3519,7 +3519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3559,7 +3559,7 @@
       "metadata": {
         "id": "0TotKKCi-xbL"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3575,7 +3575,7 @@
         "id": "dAVWusbL_fTw",
         "outputId": "07efcf9a-a6bc-4b31-db78-f10e5417e617"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3602,7 +3602,7 @@
         "id": "GkZQHIxIcqAw",
         "outputId": "119ebb2b-eb5d-4a1a-ef05-a8daba1aa34b"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3624,7 +3624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "shncGAgFnPz2"
       },
@@ -3635,7 +3635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "OpXdeTJajjb3"
       },
@@ -3682,7 +3682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3915,7 +3915,7 @@
         "\n",
         "# Conclusion:\n",
         "\n",
-        "*   #### Around the globe, people tweeted positive tweets more in comparison to negative and neutral tweets.\n",
+        "*   #### Around the globe, people tweeted positive tweets more than negative and neutral ones.\n",
         "\n",
         "*   #### Most of the tweets’ length was around 250 which means there was a high curiosity among the people related to COVID-19.\n",
         "\n",
